# nlp-sentiment-analysis

./: Dockerfile  app.py  docker-compose.yml  pyproject.toml
model/: __init__.py  review_preprocessor.py
static/css/: styles.css
templates/: index.html
