[tool.poetry]
name = "lstm-imdb-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Aniket Kumar"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
tensorflow = "^2.15.0"
nltk = "^3.8.1"
Flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
